--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,47 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  font-family: Helvetica, Arial, sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  padding: 0px;
+  margin: 0px;
+}
+
+input {
+  color: grey;
+  font-size: 1.2rem;
+  width: 100%;
+}
+
+.card-grid {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.card {
+  height: 300px;
+  width: 440px;
+  align-content: center;
+  border: 1px solid grey;
+  overflow: hidden;
+  margin-bottom: 10px;
+  margin-right: 10px;
+  border-radius: 6px;
+}
+
+.card p {
+  padding: 0px;
+  text-align: center;
+}
+
+.card img {
+  object-fit: contain;
+  /* display: block; */
+  height: 84%;
+  width: 100%;
+}
+
+div {
+  border: 0px solid red;
 }
